--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!--Герой-->
             <section class="hero">
                 <div class="overlya">
-                    <h1 class="slogan">выездная химчистка мягкой мебели <br /> матрасов и ковров <br> в киеве и пригороде </h1>
+                    <h1 class="slogan">выездная химчистка мягкой мебели <br /> матрасов и ковров <br> в житомире и пригороде </h1>
                 </div>
             </section>
 
